namespace FC4.HotelReservation.Domain.Enums;

public enum ReservationStatus
{
    Pending = 1,
    Paid = 2,
    Cancelled = 3,
    Rejected = 4,
    Refunded = 5,
}